--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,12 @@ Package: climatetools
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1
-Date: 2015-09-28
+Date: Sys.Date()
+Depends: R (>= 3.1.0)
 Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
 LazyData: TRUE
+URL: http://github.com/alexdum/climatetools
+BugReports: http://github.com/alexdum/climatetools/issues
