--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,10 @@ Title: What the Package Does (Title Case)
 Version: 0.1
 Date: Sys.Date()
 Depends: R (>= 3.1.0)
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
+Author: Alexandru Dumitrescu
+Maintainer: Alexandru Dumitrescu <alexandru.dumitrescu@gmail.com>
 Description: More about what it does (maybe more than one line)
-License: What license is it under?
+License: GPL (>= 2)
 LazyData: TRUE
 URL: http://github.com/alexdum/climatetools
 BugReports: http://github.com/alexdum/climatetools/issues
