--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: climatetools
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.1
-Date: Sys.Date()
+Version: 0.1-01
+Date: 2015-10-01
 Depends: R (>= 3.1.0)
 Author: Alexandru Dumitrescu
 Maintainer: Alexandru Dumitrescu <alexandru.dumitrescu@gmail.com>
