--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: climatetools
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Tools and data for weather and climate studies.
 Version: 0.1-01
 Date: 2015-10-01
 Depends: R (>= 3.1.0)
