--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,12 +4,11 @@ Title: Tools and data for weather and climate analysis.
 Version: 0.1-01
 Date: 2015-10-01
 Depends: R (>= 3.1.0)
-Imports:
-    h5,
-    raster
 Author: Alexandru Dumitrescu
 Maintainer: Alexandru Dumitrescu <alexandru.dumitrescu@gmail.com>
 Description: More about what it does (maybe more than one line)
 License: GPL (>= 2)
 URL: http://github.com/alexdum/climatetools
 BugReports: http://github.com/alexdum/climatetools/issues
+Imports: raster,
+    h5
