--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,12 +3,15 @@ Type: Package
 Title: Tools and data for weather and climate analysis.
 Version: 0.1-01
 Date: 2015-10-01
-Depends: R (>= 3.1.0)
+Depends:
+    R (>= 3.1.0)
 Author: Alexandru Dumitrescu
 Maintainer: Alexandru Dumitrescu <alexandru.dumitrescu@gmail.com>
 Description: More about what it does (maybe more than one line)
 License: GPL (>= 2)
 URL: http://github.com/alexdum/climatetools
 BugReports: http://github.com/alexdum/climatetools/issues
-Imports: raster,
+Imports:
+    raster,
     h5
+RoxygenNote: 5.0.0
