--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,6 @@ export(et_0)
 export(sinteze_lipsuri)
 export(wind_log)
 export(wind_stats)
+importFrom(maptools,sunriset)
+importFrom(sp,CRS)
+importFrom(sp,SpatialPoints)
