--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(et_0)
 export(sinteze_lipsuri)
 export(wind_log)
 export(wind_stats)
-importFrom(utils,read.table)
+importFrom("utils","read.table")
+importFrom("stats", "sd")
