--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 0.1-99
 Date: 2018-09-01
 Depends:
     R (>= 3.1.0)
-Author: Alexandru Dumitrescu
-Maintainer: Alexandru Dumitrescu <alexandru.dumitrescu@gmail.com>
+Author: Alexandru Dumitrescu <alexandru.dumitrescu@gmail.com>
 Description: More about what it does (maybe more than one line)
 License: GPL (>= 2)
 URL: http://github.com/alexdum/climatetools
