--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: climatetools
 Type: Package
 Title: Tools and data for weather and climate analysis
-Version: 0.1-99
+Version: 0.6-3
 Date: 2018-09-01
 Depends:
     R (>= 3.1.0)
 Author: Alexandru Dumitrescu <alexandru.dumitrescu@gmail.com>
 Maintainer: Alexandru Dumitrescu <alexandru.dumitrescu@gmail.com>
-Description: More about what it does (maybe more than one line).
+Description: Tools and data for weather and climate analysis.
 License: GPL-2 | MIT
 URL: http://github.com/alexdum/climatetools
 BugReports: http://github.com/alexdum/climatetools/issues
