--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: climatetools
 Type: Package
-Title: Tools and data for weather and climate analysis
+Title: Tools and Data for Weather and Climate Analysis
 Version: 0.6-3
-Date: 2018-09-01
+Date: 2019-02-23
 Depends:
     R (>= 3.1.0)
 Author: Alexandru Dumitrescu <alexandru.dumitrescu@gmail.com>
