--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Version: 0.6-3
 Date: 2019-03-01
 Depends:
     R (>= 3.1.0)
-Authors@R: c(person(given = "Alexandru",
-             family = "Dumitrescu"",
+Authors@R: c(person(given = "Alexandru", family = "Dumitrescu"",
              role = c("aut", "cre"),
              email = "alexandru.dumitrescu@gmail.com",
              comment = c(ORCID = "0000-0002-3361-483X"))
